[package]
name = "lienzo-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.3", default-features = true, features = [ "bevy_render","bevy_winit","bevy_core_pipeline", "bevy_sprite", "bevy_text","png","webgl2",] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1.6"
once_cell = "1.17.1"
bevy_core_pipeline = "0.14.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack]
name = "lienzo-engine"
